# my-newsletters

./: .env.example  .gitignore  .mcp.json  .session-state.json  CLAUDE.md  Dockerfile  INITIAL.md  PLANNING.md  README.md  SETUP.md  TASK.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  endpoint-implementation-plan.md  nginx.conf  populate_newsletters.py  pyproject.toml  run_migration.py  test_endpoints.py  test_phase4_security_fixed.py  test_phase5_resilience.py  test_phase6_user_experience.py  test_phase7_mobile_app.py
.claude/: settings.local.json
.claude/commands/: commit-changes.md
PRPs/: mynewsletters-voice-assistant.md
backend/: __init__.py  config.py  main.py
backend/jobs/: audio_processing.py
backend/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_storage_bucket.sql  004_correct_schema.sql  migrate.py
backend/models/: database.py  schemas.py
backend/routes/: audio.py  auth.py  briefing.py  newsletters.py
backend/services/: audio_service.py  gmail_service.py  newsletter_parser.py  session_manager.py  storage_service.py
backend/utils/: auth.py  logging_config.py  metrics.py
backend/voice/: __init__.py  agent_config.py  conversation_manager.py
backend/voice/actions/: __init__.py  base_briefing_action.py  conversational_query_action.py  metadata_action.py  skip_story_action.py  tell_more_action.py
examples/: agent-tools.md  audio-processing-job.md  db-schema.md  interrupt_handling_flow.md  sample_conversations.json
frontend/: App.tsx  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/mynewslettersapp/: MainActivity.kt  MainApplication.kt
frontend/android/app/src/main/res/values/: strings.xml
frontend/components/: AuthScreen.tsx  BriefingPlayer.tsx  HomeScreen.tsx  VoiceInterface.tsx
frontend/ios/: .xcode.env  Podfile  main.jsbundle
frontend/ios/MyNewsletters/: Info.plist
frontend/ios/MyNewslettersApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
frontend/ios/MyNewslettersApp.xcodeproj/: project.pbxproj
frontend/ios/MyNewslettersApp.xcodeproj/xcshareddata/xcschemes/: MyNewslettersApp.xcscheme
frontend/ios/MyNewslettersApp.xcworkspace/: contents.xcworkspacedata
frontend/services/: api.ts  audio.ts  auth.ts  auth.tsx
frontend/utils/: constants.ts
scripts/: build-mobile.sh  deploy.sh
tests/: conftest.py  test_api.py  test_auth.py  test_integration.py  test_minimal_auth.py  test_phase1_api_live.py  test_phase1_core_api.py  test_phase2_voice_integration.py  test_phase2_voice_integration_simple.py  test_phase3_integration.py  test_phase3_integration_simple.py  test_schemas.py  test_services_unit.py  test_voice_actions.py
tests/integration/: test_elevenlabs_integration.py  test_end_to_end.py  test_gmail_integration.py
